--- a/web/pages/folder-select/folder-select-index.less
+++ b/web/pages/folder-select/folder-select-index.less
@@ -45,6 +45,7 @@ body
         flex: 1;
         display: flex;
         flex-direction: column;
+        padding: 0 80px;
 
         .title-zone
         {
