folder select title place folder items on folder select

--- a/web/pages/folder-select/folder-select-index.less
+++ b/web/pages/folder-select/folder-select-index.less
@@ -50,6 +50,17 @@ body
         .title-zone
         {
             height: 70px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            h1
+            {
+                font-weight: 400;
+                letter-spacing: 4px;
+                font-size: 28px;
+                margin: 0;
+            }
         }
 
         .toast-zone
