--- a/web/pages/folder-select/folder-select-index.less
+++ b/web/pages/folder-select/folder-select-index.less
@@ -1,4 +1,5 @@
 @import (reference) "css/theme";
+@import "css/layout-shared";
 
 html,body,.main
 {
@@ -7,13 +8,6 @@ html,body,.main
     height: 100%;
     margin: 0;
     flex-direction: row;
-}
-
-body
-{
-    background-color: @background-main;
-    color: @text-foreground;
-    font-family: @main-font;
 }
 
 .main
