--- a/web/css/theme.less
+++ b/web/css/theme.less
@@ -5,3 +5,5 @@
 @main-font: "nunito sans";
 @recent-foreground: @recent-blue;
 @disabled-foreground: @disabled-red;
+@opened-foreground: @opened-green;
+@repeat-open-foreground: @open-again-green;
