--- a/web/pages/component-test/component-test-index.less
+++ b/web/pages/component-test/component-test-index.less
@@ -1,1 +1,10 @@
 @import "css/layout-shared";
+
+.big-buttons
+{
+    .fat-button
+    {
+        margin: 10px;
+        vertical-align: top;
+    }
+}
