laying out bookmark generate page

--- a/web/components/static-toast-bar/static-toast-bar.less
+++ b/web/components/static-toast-bar/static-toast-bar.less
@@ -1,12 +1,12 @@
 .static-toast-bar
 {
     height: 20px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
 
     .arrow
     {
-        margin-right: 8px;
+        margin-right: 5px;
     }
 
     p
