--- a/web/pages/bookmark-generate/bookmark-generate-index.less
+++ b/web/pages/bookmark-generate/bookmark-generate-index.less
@@ -1,1 +1,26 @@
 @import "css/layout-shared";
+
+.control-header
+{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+    .static-toast-bar
+    {
+        flex: 1;
+    }
+
+    .folder-back-button
+    {
+        margin-right: 30px;
+    }
+}
+
+.control-buttons
+{
+    .generate-button
+    {
+        margin: 5px 15px 5px 0;
+    }
+}
