--- a/web/css/shared.less
+++ b/web/css/shared.less
@@ -1,4 +1,4 @@
-// apply translation click animation
+// apply translation click animation. apply to object to give it active animation
 .click-animation()
 {
     &:active
