--- a/web/pages/folder-select/folder-select-index.less
+++ b/web/pages/folder-select/folder-select-index.less
@@ -21,6 +21,7 @@ html,body,.main
         display: flex;
         justify-content: center;
         align-items: center;
+        user-select: none;
 
         &:hover
         {
