back button click animation

--- a/web/pages/folder-select/folder-select-index.less
+++ b/web/pages/folder-select/folder-select-index.less
@@ -23,15 +23,20 @@ html,body,.main
         align-items: center;
         user-select: none;
 
+        img
+        {
+            width: 40px;
+            height: 40px;
+        }
+
         &:hover
         {
             opacity: 1;
         }
 
-        img
+        &:active
         {
-            width: 40px;
-            height: 40px;
+            opacity: .9;
         }
     }
 
